--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body class="[ flow ]">
+  <body>
     <header class="main-header [ bg-clear ]">
       <nav class="header-navigation [ wrapper ]">
         <a class="header-back-btn [ icon-arrow-left | hidden ]" href="#"></a>
@@ -14,13 +14,13 @@
           <use xlink:href="#ohmyfood-logo" />
         </svg>
       </nav>
-      <section class="location [ bg-midtone | shadow ]">
+      <section class="location [ flex-center | bg-midtone | shadow ]">
         <p class="icon-location-dot">Paris, Belleville</p>
       </section>
     </header>
     <main class="main-site [ flow ]">
-      <section class="hero []">
-        <h2>Réservez le menu qui vous convient</h2>
+      <section class="hero [ bg-light | flow | txt-center ]">
+        <h2 class="section-header">Réservez le menu qui vous convient</h2>
         <p>
           Découvrez des restaurants d’exception, sélectionnés par nos soins.
         </p>
