--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/ohmyfood.css" />
+    <link rel="stylesheet" href="assets/css/home.css" />
     <title>Document</title>
   </head>
   <body>
@@ -12,9 +13,9 @@
         <a class="header-back-btn [ icon-arrow-left | hidden ]" href="#"></a>
         <h1 class="header-logo">ohmyfood</h1>
       </nav>
-      <section class="location [ flex-center | bg-midtone ]">
+      <div class="location [ flex-center | bg-midtone ]">
         <p class="icon-location-dot">Paris, Belleville</p>
-      </section>
+      </div>
     </header>
     <main class="main-site [ flow-padding ]">
       <section class="hero [ bg-light | flex-center | txt-center ]">
@@ -31,24 +32,24 @@
       <section class="concept">
         <div class="wrapper [ flow ]">
           <h2 class="section-header">Fonctionnement</h2>
-          <ol class="concept-steps [ flex-center ]">
-            <div class="icon-circle-1">
-              <li
+          <ol class="concept-steps [ grid-even-columns ]">
+            <li class="icon-circle-1">
+              <span
                 class="concept-step [ icon-mobile-screen-button | bg-light | shadow ]"
               >
                 Choisissez un restaurant
-              </li>
-            </div>
-            <div class="icon-circle-2">
-              <li class="concept-step [ icon-list-ul | bg-light | shadow ]">
+              </span>
+            </li>
+            <li class="icon-circle-2">
+              <span class="concept-step [ icon-list-ul | bg-light | shadow ]">
                 Composez votre menu
-              </li>
-            </div>
-            <div class="icon-circle-3">
-              <li class="concept-step [ icon-store | bg-light | shadow ]">
+              </span>
+            </li>
+            <li class="icon-circle-3">
+              <span class="concept-step [ icon-store | bg-light | shadow ]">
                 Dégustez au restaurant
-              </li>
-            </div>
+              </span>
+            </li>
           </ol>
         </div>
       </section>
@@ -59,41 +60,78 @@
             <div class="restaurant [ bg-clear | shadow ]">
               <div class="preview">
                 <img
-                  src="./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash - 756.webp"
+                  src="./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
                   alt="La palette du goût"
-                  srcset="./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash - 756.webp 756w, ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash - 1008.webp 1008w,./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash - 1512.webp 1512w,./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash - 3024.webp 3024w"
+                  srcset="
+                    ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp  1x,
+                    ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1008.webp 1.33x,
+                    ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1512.webp 2x,
+                    ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-3024.webp 4x
+                  "
                 />
+                <em class="[ bg-information ]">Nouveau</em>
               </div>
               <div class="details [ flex-space-between ]">
                 <div>
                   <h3>La palette du goût</h3>
                   <p>Ménilmontant</p>
                 </div>
-                <input type="checkbox" />
+                <form action="#">
+                  <input
+                    class="[ hidden ]"
+                    type="checkbox"
+                    id="like-la-palette-du-gout"
+                  />
+                  <label
+                    class="[ icon-checkbox-heart ]"
+                    for="like-la-palette-du-gout"
+                  ></label>
+                </form>
               </div>
             </div>
             <div class="restaurant [ bg-clear | shadow ]">
               <div class="preview">
                 <img
-                  src="./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash - 756.webp"
+                  src="./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-756.webp"
                   alt="La note enchantée"
-                  srcset="./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash - 756.webp 756w, ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash - 1008.webp 1008w, ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash - 1512.webp 1512w, ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash - 3024.webp 3024w"
+                  srcset="
+                    ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-756.webp  1x,
+                    ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-1008.webp 1.33x,
+                    ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-1512.webp 2x,
+                    ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-3024.webp 4x
+                  "
                 />
+                <em class="[ bg-information ]">Nouveau</em>
               </div>
               <div class="details [ flex-space-between | shadow ]">
                 <div>
                   <h3>La note enchantée</h3>
                   <p>Charonne</p>
                 </div>
-                <input type="checkbox" />
+                <form action="#">
+                  <input
+                    class="[ hidden ]"
+                    type="checkbox"
+                    id="like-la-note-enchantee"
+                  />
+                  <label
+                    class="[ icon-checkbox-heart ]"
+                    for="like-la-note-enchantee"
+                  ></label>
+                </form>
               </div>
             </div>
             <div class="restaurant [ bg-clear | shadow ]">
               <div class="preview">
                 <img
-                  src="./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash - 756.webp"
+                  src="./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-756.webp"
                   alt="À la française"
-                  srcset="./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash - 756.webp 756w, ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash - 1008.webp 1008w, ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash - 1512.webp 1512w, ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash - 3024.webp 3024w"
+                  srcset="
+                    ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-756.webp  1x,
+                    ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-1008.webp 1.33x,
+                    ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-1512.webp 2x,
+                    ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-3024.webp 4x
+                  "
                 />
               </div>
               <div class="details [ flex-space-between ]">
@@ -101,15 +139,30 @@
                   <h3>À la française</h3>
                   <p>Cité Rouge</p>
                 </div>
-                <input type="checkbox" />
+                <form action="#">
+                  <input
+                    class="[ hidden ]"
+                    type="checkbox"
+                    id="like-a-la-francaise"
+                  />
+                  <label
+                    class="[ icon-checkbox-heart ]"
+                    for="like-a-la-francaise"
+                  ></label>
+                </form>
               </div>
             </div>
             <div class="restaurant [ bg-clear | shadow ]">
               <div class="preview">
                 <img
-                  src="./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash - 756.webp"
+                  src="./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-756.webp"
                   alt="Le délice des sens"
-                  srcset="./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash - 756.webp 756w, ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash - 1008.webp 1008w, ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash - 1512.webp 1512w, ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash - 3024.webp 3024w"
+                  srcset="
+                    ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-756.webp  1x,
+                    ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-1008.webp 1.33x,
+                    ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-1512.webp 2x,
+                    ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-3024.webp 4x
+                  "
                 />
               </div>
               <div class="details [ flex-space-between ]">
@@ -117,7 +170,17 @@
                   <h3>Le délice des sens</h3>
                   <p>Folie-Méricourt</p>
                 </div>
-                <input type="checkbox" />
+                <form action="#">
+                  <input
+                    class="[ hidden ]"
+                    type="checkbox"
+                    id="like-le-delice-des-sens"
+                  />
+                  <label
+                    class="[ icon-checkbox-heart ]"
+                    for="like-le-delice-des-sens"
+                  ></label>
+                </form>
               </div>
             </div>
           </div>
