--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/ohmyfood.css" />
     <link rel="stylesheet" href="assets/css/home.css" />
-    <title>Document</title>
+    <title>ohmyfood | Home</title>
   </head>
   <body>
     <header class="main-header [ bg-clear ]">
