fixes of the main site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
     <header class="main-header [ bg-clear ]">
       <nav class="header-navigation [ wrapper ]">
-        <a class="header-back-btn [ icon-arrow-left | hidden ]" href="#"></a>
         <h1 class="header-logo">ohmyfood</h1>
       </nav>
       <div class="location [ flex-center | bg-midtone ]">
@@ -24,7 +23,7 @@
           Découvrez des restaurants d’exception, sélectionnés par nos soins.
         </p>
         <a
-          class="main-action-button [ bg-gradient | shadow ]"
+          class="[ main-action-button | bg-gradient | shadow ]"
           href="#restaurants"
           >Explorer nos restaurants</a
         >
@@ -88,6 +87,10 @@
                   ></label>
                 </form>
               </div>
+              <a
+                class="link-to-page"
+                href="./restaurants/la-palette-du-gout.html"
+              ></a>
             </div>
             <div class="restaurant [ bg-clear | shadow ]">
               <div class="preview">
@@ -120,6 +123,10 @@
                   ></label>
                 </form>
               </div>
+              <a
+                class="link-to-page"
+                href="./restaurants/la-palette-du-gout.html"
+              ></a>
             </div>
             <div class="restaurant [ bg-clear | shadow ]">
               <div class="preview">
@@ -151,6 +158,10 @@
                   ></label>
                 </form>
               </div>
+              <a
+                class="link-to-page"
+                href="./restaurants/la-palette-du-gout.html"
+              ></a>
             </div>
             <div class="restaurant [ bg-clear | shadow ]">
               <div class="preview">
@@ -182,6 +193,10 @@
                   ></label>
                 </form>
               </div>
+              <a
+                class="link-to-page"
+                href="./restaurants/la-palette-du-gout.html"
+              ></a>
             </div>
           </div>
         </div>
