changed the structure of the sass

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -15,16 +15,19 @@
       </nav>
     </header>
     <main class="main-restaurant">
-      <img
-        src="../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
-        alt="La palette du goût"
-        srcset="
-          ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp  1x,
-          ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1008.webp 1.33x,
-          ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1512.webp 2x,
-          ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-3024.webp 4x
-        "
-      />
+      <div class="hero">
+        <img
+          src="../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
+          alt="La palette du goût"
+          srcset="
+            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp   756w,
+            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1008.webp 1008w,
+            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1512.webp 1512w,
+            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-3024.webp 3024w
+          "
+          sizes="100vw"
+        />
+      </div>
       <section class="menu [ flow ]">
         <div class="title">
           <h2>La palette du goût</h2>
