--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/ohmyfood.css" />
-    <link rel="stylesheet" href="../assets/css/home.css" />
+    <link rel="stylesheet" href="../assets/css/restaurant.css" />
     <title>ohmyfood | La palette du goût</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
         <h1 class="header-logo">ohmyfood</h1>
       </nav>
     </header>
-    <main class="main-restaurant">
+    <main class="main-content">
       <div class="hero">
         <img
           src="../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
@@ -28,7 +28,7 @@
           sizes="100vw"
         />
       </div>
-      <section class="menu [ flow ]">
+      <section class="menu [ bg-light | flow ]">
         <div class="title">
           <h2>La palette du goût</h2>
         </div>
@@ -219,6 +219,7 @@
           Commander
         </button>
       </section>
+      <div class="test"></div>
     </main>
     <footer class="main-footer [ bg-dark ]">
       <div class="footer-content [ flex-wrapper ]">
