--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <p class="icon-location-dot">Paris, Belleville</p>
       </div>
     </header>
-    <main class="main-site [ flow-padding ]">
+    <main class="main-content [ flow-padding ]">
       <section class="hero [ bg-light | flex-center | txt-center ]">
         <h2 class="section-header">Réservez le menu qui vous convient</h2>
         <p>
           Découvrez des restaurants d'exception, sélectionnés par nos soins.
         </p>
         <a
-          class="[ main-action-button | bg-gradient | shadow ]"
+          class="[ main-action-button | bg-gradient | shadow | rounded-border-500 ]"
           href="#restaurants"
           >Explorer nos restaurants</a
         >
@@ -34,18 +34,22 @@
           <ol class="concept-steps [ grid-even-columns ]">
             <li class="icon-circle-1">
               <span
-                class="concept-step [ icon-mobile-screen-button | bg-light | shadow ]"
+                class="concept-step [ icon-mobile-screen-button | bg-light | shadow | rounded-border-300 ]"
               >
                 Choisissez un restaurant
               </span>
             </li>
             <li class="icon-circle-2">
-              <span class="concept-step [ icon-list-ul | bg-light | shadow ]">
+              <span
+                class="concept-step [ icon-list-ul | bg-light | shadow | rounded-border-300 ]"
+              >
                 Composez votre menu
               </span>
             </li>
             <li class="icon-circle-3">
-              <span class="concept-step [ icon-store | bg-light | shadow ]">
+              <span
+                class="concept-step [ icon-store | bg-light | shadow | rounded-border-300 ]"
+              >
                 Dégustez au restaurant
               </span>
             </li>
@@ -56,7 +60,7 @@
         <div class="[ wrapper | flow ]">
           <h2>Restaurants</h2>
           <div class="feed [ grid-even-columns ]">
-            <div class="restaurant [ bg-clear | shadow ]">
+            <div class="restaurant [ bg-clear | shadow | rounded-border-400 ]">
               <div class="preview">
                 <img
                   src="./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
@@ -65,6 +69,7 @@
                     ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp   756w,
                     ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1008.webp 1008w,
                     ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1512.webp 1512w,
+                    ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-2268.webp 2268w,
                     ./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-3024.webp 3024w
                   "
                   sizes="(min-width: 650px) 50vw, 100vw"
@@ -93,7 +98,7 @@
                 href="./restaurants/la-palette-du-gout.html"
               ></a>
             </div>
-            <div class="restaurant [ bg-clear | shadow ]">
+            <div class="restaurant [ bg-clear | shadow | rounded-border-400 ]">
               <div class="preview">
                 <img
                   src="./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-756.webp"
@@ -102,6 +107,7 @@
                     ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-756.webp   756w,
                     ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-1008.webp 1008w,
                     ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-1512.webp 1512w,
+                    ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-2268.webp 2268w,
                     ./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-3024.webp 3024w
                   "
                   sizes="(min-width: 650px) 50vw, 100vw"
@@ -130,7 +136,7 @@
                 href="./restaurants/la-palette-du-gout.html"
               ></a>
             </div>
-            <div class="restaurant [ bg-clear | shadow ]">
+            <div class="restaurant [ bg-clear | shadow | rounded-border-400 ]">
               <div class="preview">
                 <img
                   src="./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-756.webp"
@@ -139,6 +145,7 @@
                     ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-756.webp   756w,
                     ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-1008.webp 1008w,
                     ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-1512.webp 1512w,
+                    ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-2268.webp 2268w,
                     ./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-3024.webp 3024w
                   "
                   sizes="(min-width: 650px) 50vw, 100vw"
@@ -166,7 +173,7 @@
                 href="./restaurants/la-palette-du-gout.html"
               ></a>
             </div>
-            <div class="restaurant [ bg-clear | shadow ]">
+            <div class="restaurant [ bg-clear | shadow | rounded-border-400 ]">
               <div class="preview">
                 <img
                   src="./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-756.webp"
@@ -175,6 +182,7 @@
                     ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-756.webp   756w,
                     ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-1008.webp 1008w,
                     ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-1512.webp 1512w,
+                    ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-2268.webp 2268w,
                     ./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-3024.webp 3024w
                   "
                   sizes="(min-width: 650px) 50vw, 100vw"
