finalized a menu-item

--- a/restaurants/res01-la-palette-du-gout.html
+++ b/restaurants/res01-la-palette-du-gout.html
@@ -48,21 +48,19 @@
           <h3>Entrées</h3>
           <ul class="category-items [ flow ]">
             <li
-              class="menu-item [ flex-space-between | bg-clear | rounded-border-400 ]"
+              class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow ]"
             >
-              <div>
+              <div class="left">
                 <p class="dish-name">Fricassée d'escargots</p>
                 <p class="dish-info">Au piment d'Espelette</p>
               </div>
-              <p class="dish-price">25€</p>
-              <form action="#">
-                <input
-                  class="[ icon-circle-check | hidden ]"
-                  type="checkbox"
-                  id="select-fricassee-descargots"
-                />
-                <label for="select-fricassee-descargots"></label>
-              </form>
+              <div class="right [ flex-end ]">
+                <p class="dish-price">25€</p>
+                <form class="[ icon-circle-check ]" action="#">
+                  <input class="[ hidden ]" type="checkbox" id="d_010101" />
+                  <label for="d_010101"></label>
+                </form>
+              </div>
             </li>
             <li
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 ]"
