done with styling the homepage and a restaurant page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           Découvrez des restaurants d'exception, sélectionnés par nos soins.
         </p>
         <a
-          class="[ main-action-button | bg-gradient | shadow | rounded-border-500 ]"
+          class="[ main-action-button | bg-gradient | shadow-300 | rounded-border-500 ]"
           href="#restaurants"
           >Explorer nos restaurants</a
         >
@@ -34,21 +34,21 @@
           <ol class="concept-steps [ grid-even-columns ]">
             <li class="icon-circle-1">
               <span
-                class="concept-step [ icon-mobile-screen-button | bg-light | shadow | rounded-border-300 ]"
+                class="concept-step [ icon-mobile-screen-button | bg-light | shadow-400 | rounded-border-300 ]"
               >
                 Choisissez un restaurant
               </span>
             </li>
             <li class="icon-circle-2">
               <span
-                class="concept-step [ icon-list-ul | bg-light | shadow | rounded-border-300 ]"
+                class="concept-step [ icon-list-ul | bg-light | shadow-400 | rounded-border-300 ]"
               >
                 Composez votre menu
               </span>
             </li>
             <li class="icon-circle-3">
               <span
-                class="concept-step [ icon-store | bg-light | shadow | rounded-border-300 ]"
+                class="concept-step [ icon-store | bg-light | shadow-400 | rounded-border-300 ]"
               >
                 Dégustez au restaurant
               </span>
@@ -60,7 +60,9 @@
         <div class="[ wrapper | flow ]">
           <h2>Restaurants</h2>
           <div class="feed [ grid-even-columns ]">
-            <div class="restaurant [ bg-clear | shadow | rounded-border-400 ]">
+            <div
+              class="restaurant [ bg-clear | shadow-500 | rounded-border-400 ]"
+            >
               <div class="preview">
                 <img
                   src="./assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
@@ -98,7 +100,9 @@
                 href="./restaurants/res01-la-palette-du-gout.html"
               ></a>
             </div>
-            <div class="restaurant [ bg-clear | shadow | rounded-border-400 ]">
+            <div
+              class="restaurant [ bg-clear | shadow-500 | rounded-border-400 ]"
+            >
               <div class="preview">
                 <img
                   src="./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-756.webp"
@@ -114,7 +118,7 @@
                 />
                 <em class="[ bg-information ]">Nouveau</em>
               </div>
-              <div class="details [ flex-space-between | shadow ]">
+              <div class="details [ flex-space-between ]">
                 <div>
                   <h3>La note enchantée</h3>
                   <p>Charonne</p>
@@ -136,7 +140,9 @@
                 href="./restaurants/la-palette-du-gout.html"
               ></a>
             </div>
-            <div class="restaurant [ bg-clear | shadow | rounded-border-400 ]">
+            <div
+              class="restaurant [ bg-clear | shadow-500 | rounded-border-400 ]"
+            >
               <div class="preview">
                 <img
                   src="./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-756.webp"
@@ -173,7 +179,9 @@
                 href="./restaurants/la-palette-du-gout.html"
               ></a>
             </div>
-            <div class="restaurant [ bg-clear | shadow | rounded-border-400 ]">
+            <div
+              class="restaurant [ bg-clear | shadow-500 | rounded-border-400 ]"
+            >
               <div class="preview">
                 <img
                   src="./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-756.webp"
