--- a/index.html
+++ b/index.html
@@ -231,7 +231,13 @@
         </ul>
         <ul class="support-links">
           <li>Mentions légales</li>
-          <li>Contact</li>
+          <li>
+            <a
+              href="mailto:info@ohmyfood.com?subject=ohmyfood%20%7C%20Demande%20d'information"
+              target="_blank"
+              >Contact</a
+            >
+          </li>
         </ul>
       </div>
     </footer>
