implemented all the interactive interactions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           Découvrez des restaurants d'exception, sélectionnés par nos soins.
         </p>
         <a
-          class="[ main-action-button | bg-gradient | shadow-300 | rounded-border-500 ]"
+          class="[ main-action-button | shadow-300 | rounded-border-500 ]"
           href="#restaurants"
           >Explorer nos restaurants</a
         >
