--- a/restaurants/res01-la-palette-du-gout.html
+++ b/restaurants/res01-la-palette-du-gout.html
@@ -202,7 +202,7 @@
         </section>
         <div class="[ flex-center ]">
           <button
-            class="[ main-action-button | bg-gradient | shadow-300 | rounded-border-500 ]"
+            class="[ main-action-button | shadow-300 | rounded-border-500 ]"
           >
             Commander
           </button>
