only restaurant pages left to add

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>ohmyfood | Home</title>
   </head>
   <body>
+    <div class="loader-screen [ bg-clear | flex-center ]">
+      <p class="[ header-logo ]">ohmyfood</p>
+      <div class="loader rspin">
+        <span class="c"></span>
+        <span class="d spin"><span class="e"></span></span>
+        <span class="r r1"></span>
+        <span class="r r2"></span>
+        <span class="r r3"></span>
+        <span class="r r4"></span>
+      </div>
+    </div>
     <header class="main-header [ bg-clear ]">
       <nav class="header-navigation [ wrapper ]">
         <h1 class="header-logo">ohmyfood</h1>
